[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentlint"
version = "0.1.0"
description = "Audit and score agent context files (AGENTS.md, CLAUDE.md, .cursorrules) against a research-backed rubric."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bobby", email = "bobby@claudewitz.dk" }]
keywords = ["agents", "lint", "audit", "claude", "codex", "copilot", "context-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agentlint = "agentlint:main"

[project.urls]
Homepage = "https://github.com/robobobby/agentlint"
Repository = "https://github.com/robobobby/agentlint"
